--- a/Пятое задание/style.css
+++ b/Пятое задание/style.css
@@ -80,9 +80,7 @@ header .menu ul li{
 header .menu ul{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    /*width: 100%;*/
-    
+    justify-content: space-between;    
 }
 
 header .btn a{
@@ -111,8 +109,7 @@ header .logo{
 header .menu{
     margin-left: 60%;
     position: relative;
-    top: -15px;
-    
+    top: -15px;    
 }
 
 header .btn{
@@ -189,9 +186,7 @@ header .btn{
 
 .container3 .flexkul{
     display: flex;
-    justify-content: space-around;
-    
-    
+    justify-content: space-around;  
 }
 
 .container3 .kvad2 .kvad21{
@@ -213,7 +208,6 @@ header .btn{
     width: 100%;
     margin-left: 15px;
 }
-
 
 .container3 .flexkul .kvad2 .kvad21 span{    
     width: 100%;
@@ -254,7 +248,7 @@ header .btn{
     margin-bottom: 140px;
     margin-top: 25px;
 }
-
+/*
 .container4{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -337,7 +331,7 @@ header .btn{
 
 .container4 .item6 p{
     color: #fff;
-}
+}*/
 
 .container5{
     margin-top: 220px;
@@ -370,11 +364,9 @@ header .btn{
     height: 640px;   
     width: 1035px;    
 }
-}
-.container5 .ramka .phone2 {   
-    width: 100px;    
-    
 
+.container5 .ramka .phone2 {   
+    width: 100px; 
 }
 
 .container5 .ramka .planshet {   
@@ -390,78 +382,8 @@ header .btn{
     max-width: 100%;
     margin-left: -5px;    
     display: block;
-    position: relative;
-    
-    
+    position: relative;   
 }
-/*.container5 .planshet{
-    display: flex;
-    /*margin-top: -615px;
-    margin-left: -5px;
-    background-repeat: no-repeat;
-    background-position-x: 100%;
-    background-size: cover;
-    width: auto;
-    
-}
-<img class="ramka" src="./image/phone.png" alt="ramka">
-.container5 .mobile{
-    display: block;
-}
-
-.container5 .phone .bel{
-    display: flex;
-    align-items: center;
-    flex-direction: column; 
-    background-color: #ffffff;
-    max-height: 345px;
-    max-width: 213px;
-    /*margin-top: -430px;
-    margin-left: -6px;*/
-    
-}
-/*
-.container5 .phone .bel .verx_phone{
-    height: 15px;
-    margin-bottom: 23px;
-}
-.container5 .phone .bel .center_phone{    
-    height: 144px;
-    width: 98px;  
-}
-.container5 .phone .text1{    
-    font-size: 12px;
-    font-family: 'Ubuntu', sans-serif;
-    font-weight: 500;
-    text-align: center;
-}
-.container5 .phone .linia{      
-    display: flex;  
-    margin-top: 7px;
-    margin-bottom: 7px;
-}
-.container5 .phone .line{   
-    height: 1px; 
-    width: 45px;
-    background-color: #000000;
-}
-.container5 .phone .line2{ 
-    height: 1px; 
-    width: 100px;
-    background-color: #e8eaf1;
-}
-.container5 .phone .text{      
-    font-size: 9px;
-    font-family: 'Ubuntu', sans-serif;
-    font-weight: 300; 
-    margin-left: -115px;    
-}
-.container5 .phone .text0{      
-    font-size: 9px;
-    font-family: 'Ubuntu', sans-serif;
-    font-weight: 300; 
-    margin-left: -120px;    
-}*/
 
 .container5 .right_content h4{
     font-family: 'Ubuntu', sans-serif;
@@ -551,7 +473,6 @@ header .btn{
     display: flex;
     justify-content: center;
     align-items: start;
-
 }
 .container6 .center_content h5{
     color:  #fcfcfc;
@@ -780,8 +701,7 @@ header .btn{
     height: 130px;
 }
 .container9{
-    background-image: url('./image/Fon100.png');
-    
+    background-image: url('./image/Fon100.png');    
     max-height: 1080px;
     background-size: cover;
     background-repeat: no-repeat;
@@ -884,9 +804,7 @@ header .btn{
 .container12 .center_content p{
     color: #999999;
 }
-/*.container12 .left_content .flexbro a{
-    border: none;
-}*/
+
 .container12 .left_content .flexbro a svg{    
     color: #666666;
     height: 16px;
@@ -966,10 +884,6 @@ header .btn{
     .container5 .right_content .right_text p {
         width: 600px;
     }
-    /*.container5 .right_content .right_text p {
-        
-    }*/
-    
 }
 
 @media(max-width: 1406px){
@@ -986,10 +900,6 @@ header .btn{
         margin-left: 10%;
         margin-right: 10%;
     }
-   /* .container3 .kvad2{
-       width: 380px; 
-       margin-left: 10px;
-    }*/
 }
 @media(max-width: 1206px){
     header .menu{
@@ -997,7 +907,7 @@ header .btn{
     }
 }
 @media(max-width: 1200px){
-    .container4{    
+    /*.container4{    
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     }
@@ -1009,7 +919,7 @@ header .btn{
     .container4 .item7{
         grid-column: 1/3;
         grid-row: 5/6;
-    }
+    }*/
 
     .container7 .grids{
         display: grid;
@@ -1114,8 +1024,7 @@ header .btn{
         font-size: 40px;
         padding-top: 235px;
     }
-
-    .container4 .item span{
+    /*.container4 .item span{
         margin-top: 8%;
     }
     .container4 .item7 span{
@@ -1123,7 +1032,7 @@ header .btn{
     }
     .container4 .item6 span {    
         margin-top: 65%;
-    }    
+    }    */
     .container2 h3 {
         margin-right: 10%;
         text-align: center;
@@ -1179,7 +1088,7 @@ header .btn{
     }
 }
 @media(max-width: 690px){
-    .container4{    
+    /*.container4{    
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
     }
@@ -1224,7 +1133,7 @@ header .btn{
     .container4 .item6 p{
         margin-left: 25%;
         width: 50%; 
-    }
+    }*/
     .container7 .grids{    
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -1313,9 +1222,7 @@ header .btn{
     header .menu {        
         width: 180px;
     }
-    /*.container2 a {
-        
-    }*/.container2 a {
+   .container2 a {
     padding: 25px 65px;
     margin-left: 18%;
     }
@@ -1336,7 +1243,7 @@ header .btn{
         width: 100%;
     }
     /*GREEED*/
-    .container4 .item span {
+    /*.container4 .item span {
         margin-top: 10%;
         margin-left: 15%;
     }
@@ -1357,45 +1264,10 @@ header .btn{
     .container4 .item6 p{
         margin-left: 15%;
         width: 70%; 
-    }
+    }*/
 }
 @media(max-width:332px){
     .container5 .right_content .right_icon svg {
         margin-bottom: 146px;
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-/*
-<div class="bel">
-                                        <img class="verx_phone" src="./image/verx_phone.png" alt="verx">
-                                        <div class="shadow-lg mb-5 bg-white rounded"><img  class="center_phone" src="./image/mobile.png" alt="center"></div>
-                                        <p class="text1">Starting a Creative Firm in the<br> 
-                                            Age of Digital Marketing</p>
-                                        <span class="text">100 min</span>
-                                        <div class="linia">   
-                                            <span class="line"></span>
-                                            <span class="line2"></span>
-                                        </div>     
-                                        <p class="text0">pause</span>
-                                        </div>
-
-
-
-                                        offset-xl-8
-
-
- <a href="#"><img  src="./image/12.1.png" alt="feisbook"></a>
-                                <a href="#"><img  src="./image/12.2.png" alt="twittr"></a>
-                                <a href="#"><img  src="./image/12.3.png" alt="koleso"></a>
-                                <a href="#"><img  src="./image/12.4.png" alt="in"></a>*/
